@@ -104,6 +104,12 @@ Note: This is a change to what is displayed and the entries are not updated to p
 <td>Paste into the Notes field (Add or Edit entry) is now always in plain text.</td>
 </tr>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3518734);return false;">3518734</a></td>
+<td>When generating passwords (Ctrl-P), the user is no longer prompted to save changes
+when pressing Esc  if they have selected a Named Password Policy but not generated
+a password.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3518732);return false;">3518732</a></td>
 <td>Custom special symbol set now handled correctly in Generate Password dialog box.</td>
 </tr>
